# rask

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  input.rs  main.rs  repl.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  history.rs  lib.rs  paths.rs  session.rs
crates/core/src/client/: anthropic.rs  mod.rs  openai.rs
docs/: design.md
