[package]
name = "rask-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
thiserror = "1"
futures-util = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
